Less fluff, more stuff

--- a/src/index.html
+++ b/src/index.html
@@ -21,12 +21,9 @@
           </div>
         </div>
       </form>
-      <div class="tweets">
-        <p>Enter your query and prepare to be thrilled and dazzled.
-      <div>
+      <div class="tweets"></div>
       <hr>
-        <p><small>Your credentials will be used only to communicate with the Twitter website. You can check <a href="https://github.com/icoloma/twitter-roulette">the source code on Github</a>.</small>
-        <br><small>Developed in 24h with ♥ by Extrema Sistemas. If you like it, share the love <a href="http://twitter.com/extremasistemas">on Twitter</a>.</small>
+      <p>Developed with ♥ by <a href="http://twitter.com/nachocoloma">Nacho Coloma</a>.
       </div>
 
       </div>
