--- a/src/options.html
+++ b/src/options.html
@@ -14,6 +14,7 @@
       </div>
       <div class="columns medium-6">
         <p class="lead">We need you to fill this form in order to execute Twitter queries. Go to <a href="https://apps.twitter.com/">apps.twitter.com</a> to create an app and an Access Token, and copy them here.
+        <p>These credentials will be used only to communicate with the Twitter website. You can check <a href="https://github.com/icoloma/twitter-roulette">the source code on Github</a>.
       </div>
       <div class="columns medium-6">
         <form class="options-form">
