--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <div class="row">
       <div class="columns">
         <div class="collapsible-header">
-          <h1>DAT Twitter Roulette</h1>
+          <h1>Let's play Twitter Roulette</h1>
           <p class="lead">Search for a random tweet in fashion and style.
         </div>
         <form class="roulette-form">
